[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
authors = [
  { name = "Mathieu Moalic", email = "matmoa@amu.edu.pl" },
]
dependencies = []
name = "mx3expend"
requires-python = ">=3.8"
version = "0.0.1"
readme = "README.md"
description = "A Python package that can expend your mx3 templates"

[project.scripts]
mx3expend= "mx3expend:entrypoint"


[tool.pyright]
reportOptionalMemberAccess = false
